force-app/main/default/objects/Policycase__c/Policycase__c.object-meta.xml
<CustomObject>
    <description>PolicyCaseAssociation</description>
    <label>Policy</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Policy Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>