force-app/main/default/objects/Policycase__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <referenceTo>Policy_Information__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>PolicyCaseAssociation</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>