force-app/main/default/objects/Policycase__c/fields/Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type__c</fullName>
    <label>Policy Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accident Protection</fullName>
            </value>
            <value>
                <fullName>CERA</fullName>
            </value>
            <value>
                <fullName>Critical Illness</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>FSA</fullName>
            </value>
            <value>
                <fullName>Hospital Indemnity</fullName>
            </value>
            <value>
                <fullName>HRA</fullName>
            </value>
            <value>
                <fullName>HRA Standalone</fullName>
            </value>
            <value>
                <fullName>Life/Di</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>OptumRx</fullName>
            </value>
            <value>
                <fullName>Ret / URS</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Pet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>