force-app/main/default/objects/Policycase__c/fields/UniqueCasePolicyAssociation__c.field-meta.xml
<CustomField>
    <fullName>UniqueCasePolicyAssociation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UniqueCasePolicyAssociation</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>