force-app/main/default/objects/Policycase__c/validationRules/AccountRelayedToPolicyandCase.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountRelayedToPolicyandCase</fullName>
    <active>true</active>
    <description>Account Id on Case &amp; policies should be same</description>
    <errorConditionFormula>Case__r.AccountId&lt;&gt;Policy__r.Company__c</errorConditionFormula>
    <errorDisplayField>Case__c</errorDisplayField>
    <errorMessage>The Case Selected dose not belong the related policy Company</errorMessage>
</ValidationRule>