force-app/main/default/objects/Policycase__c/validationRules/Policy_related_to_Accounts.validationRule-meta.xml
<ValidationRule>
    <fullName>Policy_related_to_Accounts</fullName>
    <active>false</active>
    <errorConditionFormula>Case__r.Account.Name  &lt;&gt;  Policy__r.Company__r.Name</errorConditionFormula>
    <errorMessage>The policy selected does not belong to the associated account.</errorMessage>
</ValidationRule>